# EDAN35

./: .gitignore  CMakeLists.txt  README.txt
include/glad/: glad.h
shaders/: quad.frag  quad.vert  trace.glsl  traceBVH.glsl  traceOwnBVH.glsl
src/: bvh.cc  bvh.hh  glad.c  main.cc  mainBVH.cc  mainOwnBVH.cc  structs.cc  structs.hh  utilities.cc  utilities.hh
